<resources>
    <string name="app_name">FitWork</string>
    <string name="title_activity_workouts">workouts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Contact</string>
    <string name="menu_slideshow">About</string>
    <string name="home">Home</string>
    <string name="task_reminder">Task Reminder</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">WORKOUT STEPS 1</string>
    <string name="content1">Effective Home Workouts for fast muscle building without eqipment.</string>
    <string name="content2">FITWORK application makes you go beyond what you think as your body muscles grow and more flexible not like before.</string>
    <string name="content3">Focuses on 6 major muscle groups:</string>
    <string name="abscon">-->      Abs Workout</string>
    <string name="shouldercon">-->      Shoulder and Back Workout</string>
    <string name="legcon">-->      Leg Workout</string>
    <string name="armcon">-->      Arm and Chest Workout</string>
    <string name="lie">1. Lie on your back with your knees bent and your arms stretched forward.</string>
    <string name="exhale">2. Exhale and lift your upper body, keeping your head and neck relaxed.</string>
    <string name="abdobenefit">Abdominal crunches are designed to tone the core muscles of the body.</string>
    <string name="blie">Lie on the floor with your hands behind your ears. Raise your knees and close your right elbow toward your left knee, then close yourleft elbow toward your right knee. Repeat the exercise.</string>
    <string name="bicbene">This exercise works your abs and obliques and because it keeps your body moving constantly, boosts your heart rate and burns even more calories.</string>
    <string name="liea">1. Lie on your back with your knees bent and your hands behind your ears.</string>
    <string name="lieb">2. Raise and twist your torso so your right elbow moves to meet your left knee. Repeat with the other side.</string>
    <string name="liec">The cross crunch targets both abs and the oblique muscles. This exercise helps to strengthen the core, sculpts the waist.</string>
    <string name="lied">1. Liew down on your back, and put your hands beneath your hips for support.</string>
    <string name="liee">2. Then lift your legs up until the form a right angle with the floor.</string>
    <string name="lief">3. Slowly bring your legs back down and repeat the exercise.</string>
    <string name="lieg">Tones, strengthens muscles in your adbomen and legs.</string>
    <string name="lieh">Start in the push-up position. Bend your right knee towards your chest and keep your left leg straight, then quickly switch from one leg to another.</string>
    <string name="liei">This exercise are great for building cardio endurance, core strength, and agility.</string>
    <string name="liej">1. Lie on your stomach with your arms to your sides.</string>
    <string name="liek">2. Lift your arms up and extend them over your head to touch your thumbs. Then slowly bring them back. Repeat the exercise.</string>
    <string name="liel">1. Sit on the floor with your knees bent and feet flat on the floor. Put your hands beneath your shoulders with your fingers pointing toward your hips.</string>
    <string name="liem">2. Lift your hips off the floor. Then bend and extend your elbows to lower and lift your hips.</string>
    <string name="lien">This exercise works almost all of the upper body muscles as it strengthens as muscles in the shoulder, chest as well as triceps.</string>
    <string name="lioo">1. Start with your hands and feet on the floor. Put your hands shoulder width apart. Bend your body, and fit your hips up in an upside down V shape.</string>
    <string name="liep">2. Bend your elbows, and bring your head close to the floor. Push your body back, and repeat the exercise.</string>
    <string name="lieq">This exercise works your shoulders, arms, chest, back and core, and helps to tone and strengthen your entire upper body.</string>
    <string name="lier">1. Lie down on your stomach with your toes touching the floor, and your chin on your hand.</string>
    <string name="lies">2. Raise your chest up as high as possible off the floor. Hold this position for a few seconds and then go back to the start position. Repeat the exercise.</string>
    <string name="liet">This exercise also contribute, in part, in developing and strengthening your body core.</string>
    <string name="lieu">1. Lie on your back with your feet on the floor and your arms bent on two sides.</string>
    <string name="liev">2. Push your chest up as far as you can, and then slowly go back to the start position. Repeat the exercise.</string>
    <string name="liew">This exercise is beneficial for building upper body strength.</string>
    <string name="atext">1. Lay prone on the ground with arms supporting your body.</string>
    <string name="btext">2. Keep your body straight while raising and lowering your body with your arms.</string>
    <string name="ctext">Increase Testosterone and reduce Osteoporosis Development.</string>
    <string name="dtext">1. Start in the regular push-up position but with your hands spread wider than your shoulders.</string>
    <string name="etext">2. Then push your body up and down. Remember to keep your body straight.</string>
    <string name="ftext">Prevent lower back injuries.</string>
    <string name="gtext">1. Start on all fours with your knees under your butt and your hand under your shoulders.</string>
    <string name="htext">2. Then elevate your feet on a chair or bench, and push your body up and down mainly using your arm strength. Remember to keep your body srtaight.</string>
    <string name="itext">Enhance your Cardiovascular System</string>
    <string name="jtext">1. Start on all fours with your knees under your butt and your hand under your shoulders.</string>
    <string name="ktext">2. Make a diamond shape with your forefingers and thumbs together directly under your face, then push your body up and down.</string>
    <string name="ltext">Improve your posture.</string>
    <string name="mtext">1. Start with your hands and feet touching the floor, body bent and butt up in an upside down V shape.</string>
    <string name="ntext">2. Then bend your elbows to bring your body towards the floor. When your body is close to the floor, raise your upper body as fas as possible. then return to the original position and repeat.</string>
    <string name="otext">Prevent lower back injuries.</string>
    <string name="atxt">1. Stand with your feet shoulder width apart and your arms stretched forward, then lower your body until your thighs are parallel with the floor.</string>
    <string name="btxt">2. Your knees should be extended in the same direction as your toes. And return to the start position.</string>
    <string name="ctxt">Reduces the risk of injury.</string>
    <string name="dtxt">1. Start with your hands on your hips and feet a little wider than shoulder width apart.</string>
    <string name="etxt">2. Then lower your body until your thighs are parallel to the floor.</string>
    <string name="ftxt">3. Your knees should be extended in the same direction as your tiptoes.</string>
    <string name="gtxt">Strenghtens your core.</string>
    <string name="htxt">1. Start with your feet shoulder width aprt and your hands on your hips.</string>
    <string name="itxt">2. Step a big step backward with your right leg and lower your body until your left thigh is parallel to the floor. Return and repeat with the other side.</string>
    <string name="jtxt">This exercise helps in achieving proper body balance and coordination.</string>
    <string name="ktxt">1. Starts in the squat position, then jump up using abdonimal muscles for strength.</string>
    <string name="ltxt">This exercise strengthening your lower body and core muscles, burning calories and fat, toning your butt and legs, improving balance and agility, and ultimately, helping you lose weight.</string>
    <string name="mtxt">1. Stand straight up. Then step back with your left leg to the right, and bend your knees at the same time.</string>
    <string name="ntxt">2. Go back to the position and switch to the other side.</string>
    <string name="otxt">Stronger legs and Glutes.</string>
    <string name="infos">For your suggestions and questions just kindly email us in fitwork@gmail.com.</string>
    <string name="infos2">Contact number: 09167320092 </string>
    <string name="acobra">1. Lie down on your stomach and bend your elbows with your hands beneath your shoulders.</string>
    <string name="bcobra">2. Then push your chest up off the ground as far as possible. Hold this position for seconds.</string>
    <string name="ccobra">Decrease stiffness of the lower back</string>

</resources>