<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/new_login_gradients"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/bowlby_one_sc"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="About"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/content1"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_slideshow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/content2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_slideshow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463"
        tools:layout_editor_absoluteX="6dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/content3"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_slideshow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567"
        tools:layout_editor_absoluteX="6dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/abscon"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_slideshow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623"
        tools:layout_editor_absoluteX="129dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/shouldercon"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_slideshow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667"
        tools:layout_editor_absoluteX="7dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/legcon"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_slideshow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704"
        tools:layout_editor_absoluteX="6dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/armcon"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_slideshow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746"
        tools:layout_editor_absoluteX="7dp" />


</androidx.constraintlayout.widget.ConstraintLayout>