<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fitwork.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.fitwork.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.fitwork.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/absWorkout"
        android:name="com.example.fitwork.AbsWorkout"
        android:label="fragment_abs_workout"
        tools:layout="@layout/fragment_abs_workout" />
    <fragment
        android:id="@+id/absWorkoutInstructions"
        android:name="com.example.fitwork.AbsWorkoutInstructions"
        android:label="fragment_abs_workout_instructions"
        tools:layout="@layout/fragment_abs_workout_instructions" />
    <fragment
        android:id="@+id/shoulderWorkout"
        android:name="com.example.fitwork.ShoulderWorkout"
        android:label="fragment_shoulder_workout"
        tools:layout="@layout/fragment_shoulder_workout" />
    <fragment
        android:id="@+id/armWorkout"
        android:name="com.example.fitwork.ArmWorkout"
        android:label="fragment_arm_workout"
        tools:layout="@layout/fragment_arm_workout" />
    <fragment
        android:id="@+id/legWorkout"
        android:name="com.example.fitwork.LegWorkout"
        android:label="fragment_leg_workout"
        tools:layout="@layout/fragment_leg_workout" />
</navigation>